[package]
name = "vacp2p_pmtree"
version = "2.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Persistent Merkle Tree in Rust"

[dev-dependencies]
hex-literal = "0.3.4"
tiny-keccak = { version = "=2.0.2", features = ["keccak"] }
sled = "=0.34.7"
ark-serialize = { version = "0.5.0", default-features = false }

[dependencies]
rayon = { version = "1.10.0", optional = true }

[features]
default = ["parallel"]
parallel = ["rayon", "ark-serialize/parallel"]
